# conan-bzip2

./: CMakeLists.txt  README.md  appveyor.yml  conanfile.py
patches/: bzip2-1.0.6_modern_cmake_build.patch
test_package/: conanfile.py
